--- a/portStyle.css
+++ b/portStyle.css
@@ -18,7 +18,7 @@ body {
     z-index: 2;
     white-space: nowrap; 
     align-items: center; 
-    position: sticky;
+    position: fixed;
     padding: 15px;
     background-color: rgb(24, 24, 24);
     max-height: 80px;
@@ -239,6 +239,7 @@ body {
     grid-template: 1fr / 1fr 6fr 1fr;
     gap: 10px;  
     justify-content: center;
+    margin-top: 80px;
 }
 #mainContentDiv {
     display: grid; 
