--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     z-index: 2;
     white-space: nowrap; 
     align-items: center; 
-    position: sticky;
+    position: fixed;
     padding: 15px;
     background-color: rgb(24, 24, 24);
 }
@@ -243,6 +243,7 @@ body {
     margin: 25px;
     flex-grow: 1;
     align-content: center;
+    margin-top: 80px;
 }
 #imageDiv {
     display: flex;
